manifests/media/profilarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: profilarr
  namespace: media
spec:
  serviceName: profilarr
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: profilarr
  template:
    metadata:
      labels:
        app: profilarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      restartPolicy: Always
      containers:
        - name: profilarr
          image: ghcr.io/dictionarry-hub/profilarr:latest@sha256:ddcdd0f340043c2ec0a85ca74b9a6be9be42b1c0288c75fc36a26a43f695860b
          ports:
            - containerPort: 6868
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: profilarr-config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            tcpSocket:
              port: 6868
          readinessProbe:
            tcpSocket:
              port: 6868
      volumes:
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: profilarr-config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn
