manifests/media/profilarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profilarr-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: profilarr.cluster.nelsondane.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: profilarr
              port:
                number: 6868
