manifests/media/profilarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: profilarr
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - profilarr.cluster.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: profilarr
          port: 6868
